--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
 add Bank => done
 search check/client/bank with filter state
-get banks and use them in the code do not use just the array
+get banks and use them in the code do not use just the array => done
