--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
 add Bank => done
-search check/client/bank with filter state
+search check/client/bank with filter statev=> done
 get banks and use them in the code do not use just the array => done
